# gitk-fast

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  VERSION
.github/workflows/: ci.yaml
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  client_exception.cpp  external_runner.cpp  git_repository.cpp  git_smart_pointer.cpp  gitkf.cpp  line_reader.cpp  module.cpp  option.cpp  ring_buffer.cpp  string_utils.cpp
src/lib/linux/: platform_utils.cpp
src/lib/win/: platform_utils.cpp
src/res/: CMakeLists.txt  res.cpp  res.h
src/res/wwwroot/: app.css  app.js  components.js  index.html  version.js
