add_library(gitkf_lib)
target_sources(gitkf_lib PUBLIC FILE_SET CXX_MODULES FILES
    client_exception.cpp
    external_runner.cpp
    git_repository.cpp
    git_smart_pointer.cpp
    gitkf.cpp
    module.cpp
    option.cpp
    ring_buffer.cpp
)
target_link_libraries(gitkf_lib
    PUBLIC
        gitkf_res
    INTERFACE
        libgit2package
        Crypt32.lib
        Rpcrt4.lib
        Winhttp.lib
)